@@ -1,3 +1,14 @@
+2002-06-04  Seth Nickell  <snickell@stanford.edu>
+
+	* gnome-window-manager.c: (gnome_window_manager_get_ditem):
+	* gnome-window-manager.h:
+	* gnome-wm-manager.c: (gnome_wm_manager_set_current),
+	(gnome_wm_manager_get_current), (gnome_wm_manager_same_wm):
+	* gnome-wm-manager.h:
+
+	Clean the APIs a little bit, add a mechanism for discovering if two GnomeWindowManager *s are
+	the same Window Manager underneath.
+	
 2002-06-03  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* .cvsignore: Add newline
